# smart-home

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.cursor/rules/: smart-home-context.mdc
proxy/: .env.example  README.md  package-lock.json  package.json  server.js
scripts/: smart-home.sh
server/: .gitignore  README.md  openapi.yaml  package-lock.json  package.json  vitest.config.ts
server/prisma/: schema.prisma
server/src/: index.ts
server/src/routes/: groups.ts  hue.ts  nanoleaf.ts  rooms.ts  switchbot.ts
server/src/services/: database.ts  deviceSync.ts  groups.test.ts  groups.ts  hue.ts  nanoleaf.ts  rooms.ts  switchbot.test.ts  switchbot.ts
server/src/services/polling/: DeviceCache.ts  DeviceTypePoller.ts  HuePoller.ts  NanoleafPoller.ts  PollingManager.ts  RateLimiter.ts  SwitchBotPoller.ts  index.ts
server/src/services/websocket/: WebSocketBroadcaster.ts  index.ts
server/src/types/: index.ts
server/src/utils/: colorConversion.ts  configManager.ts  migrateConfig.ts
voice-assistant/: .env.example  .gitignore  README.md  pyproject.toml
voice-assistant/src/belle/: __init__.py  config.py  context.py  conversation.py  http.py  llm.py  logging_config.py  main.py  mlx_lock.py  personality.py  stt.py  tts.py  wake_word.py
voice-assistant/src/belle/llm/: __init__.py  anthropic.py  common.py  local.py  openai.py
voice-assistant/src/belle/tools/: __init__.py  devices.py  groups.py  rooms.py
voice-assistant/tests/: __init__.py  audio_utils.py  conftest.py  test_api.py  test_context.py  test_conversation.py  test_groups.py  test_http.py  test_integration.py  test_llm.py  test_llm_anthropic.py  test_llm_openai.py  test_logging.py  test_rooms.py  test_tools.py
web-app/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
web-app/public/: manifest.json
web-app/src/: App.tsx  index.css
web-app/src/components/: ColorPicker.tsx  DeviceCard.tsx  DeviceRoomAssigner.tsx  GroupCard.tsx  GroupManager.tsx  LightControl.tsx  RoomManager.tsx  RoomSection.tsx  RoomSelector.tsx  RoomView.tsx  SetupWizard.tsx  ShadeCard.tsx  ShadeControl.tsx  SplashScreen.tsx  VoiceButton.tsx  VoiceOrb.tsx
web-app/src/components/icons/: DeviceIcons.tsx
web-app/src/components/ui/: BulbControl.tsx  CloseButton.tsx  DeviceControlItem.tsx  EmptyState.tsx  EmptyStateIcons.tsx  HideDeviceButton.tsx  LoadingSpinner.tsx  Modal.tsx  RoomIcon.tsx  SearchInput.tsx  ShadeOpenCloseButtons.tsx  ShadeVisual.tsx  Slider.tsx  StatusDot.tsx  TiltBlindControl.tsx  ToggleSwitch.tsx  index.ts
web-app/src/components/voice/: CircularWaveform.tsx  ConversationOverlay.tsx  DynamicBackground.tsx  FloatingParticles.tsx
web-app/src/hooks/: useBodyScrollLock.ts  useDevices.ts  useDevicesWebSocket.ts  useGroups.ts  useRooms.ts  useVoiceAssistant.ts
web-app/src/services/: api.ts
web-app/src/types/: devices.ts
web-app/src/utils/: debounce.ts  rooms.ts  shadeHelpers.ts
